--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <H1>Mike Reed</H1>
 
+<h3>
+I work on <a href="https://skia.org">Skia</a> at Google.
+<br/><br/>
+I teach a graphics class <a href="https://catalog.unc.edu/courses/comp/">475</a> at UNC.
+<br/><br/>
+I studied <a href="https://isp.northwestern.edu/">Integrate Science</a> at Northwestern, and <a href="https://math.unc.edu/">dynamical systems</a> at UNC.
+</h3>
